# EncodeVideo

./: .gitignore  CMakeLists.txt  main.c
